@@ -1,3 +1,6 @@
+Changes in next
+  - Make `...` match empty lines
+
 Changes in 0.11.1
  - Fix an issue with Unicode output on Windows (see #149)
 
